@@ -27,6 +27,7 @@ spark.cassandra.auth.username                        | login name for password a
 spark.cassandra.auth.password                        | password for password authentication                              |
 spark.cassandra.auth.conf.factory                    | name of a Scala module or class implementing `AuthConfFactory` providing custom authentication configuration | `com.datastax.spark.connector.cql.DefaultAuthConfFactory`
 spark.cassandra.query.retry.count                    | number of times to retry a timed-out query                        | 10
+spark.cassandra.query.retry.delay                    | the delay between subsequent retries (can be constant, like 1000; linearly increasing, like 1000+100; or exponential, like 1000\*2) | 4000\*1.5
 spark.cassandra.read.timeout_ms                      | maximum period of time to wait for a read to return               | 12000 ms
 spark.cassandra.connection.ssl.enabled               | enable secure connection to Cassandra cluster                     | false
 spark.cassandra.connection.ssl.trustStore.path       | path for the trust store being used                               | None
@@ -51,6 +52,14 @@ To import Cassandra-specific functions on `SparkContext` and `RDD` objects, call
 ```scala
 import com.datastax.spark.connector._                                    
 ```
+
+Query retry delay can be configured in few different ways:
+* `<delay in ms>` - for a constant delay before each retry
+* `<initial delay in ms>+<increase in ms>` - for a linearly increasing delay - delay before each retry
+  will be longer than the delay before the previous retry by increase factor
+* `<initial delay in ms>*<increase multiplier, float>` - for an exponentially increasing delay - delay 
+  before each retry will be as many times longer than the previous retry delay as specified 
+  by the multiplier
 
 ### Connection management
 
