@@ -41,6 +41,7 @@ import com.datastax.spark.connector.cql.CassandraConnectorConf.CassandraSSLConf
   *   - `spark.cassandra.auth.password`:                        password for password authentication
   *   - `spark.cassandra.auth.conf.factory`:                    name of a Scala module or class implementing [[AuthConfFactory]] that allows to plugin custom authentication configuration
   *   - `spark.cassandra.query.retry.count`:                    how many times to reattempt a failed query (default 10)
+  *   - `spark.cassandra.query.retry.delay`:                    the delay between subsequent retries
   *   - `spark.cassandra.connection.ssl.enabled`:               enable secure connection to Cassandra cluster
   *   - `spark.cassandra.connection.ssl.trustStore.path`:      path for the trust store being used
   *   - `spark.cassandra.connection.ssl.trustStore.password`:  trust store password
@@ -229,7 +230,8 @@ object CassandraConnector extends Logging {
             connectTimeoutMillis: Int = CassandraConnectorConf.DefaultConnectTimeoutMillis,
             readTimeoutMillis: Int = CassandraConnectorConf.DefaultReadTimeoutMillis,
             connectionFactory: CassandraConnectionFactory = DefaultConnectionFactory,
-            cassandraSSLConf: CassandraSSLConf = CassandraConnectorConf.DefaultCassandraSSLConf) = {
+            cassandraSSLConf: CassandraSSLConf = CassandraConnectorConf.DefaultCassandraSSLConf,
+            queryRetryDelay: CassandraConnectorConf.RetryDelayConf = CassandraConnectorConf.DefaultQueryRetryDelay) = {
 
     val config = CassandraConnectorConf(
       hosts = hosts,
@@ -244,7 +246,9 @@ object CassandraConnector extends Logging {
       connectTimeoutMillis = connectTimeoutMillis,
       readTimeoutMillis = readTimeoutMillis,
       connectionFactory = connectionFactory,
-      cassandraSSLConf = cassandraSSLConf)
+      cassandraSSLConf = cassandraSSLConf,
+      queryRetryDelay = queryRetryDelay
+    )
 
     new CassandraConnector(config)
   }
