@@ -1,5 +1,6 @@
 1.2.4
  * Cassandra native count is performed by `cassandraCount` method (SPARKC-215)
+ * Add a configurable delay between subsequent query retries (SPARKC-221)
 
 1.2.3
  * Support for connection compressions configuration (SPARKC-124)
